--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,3 +1,16 @@
+
+@media only screen and (max-width: 600px) {
+  .NavBar {
+    font-size: 2px;
+  }
+  .NavBar-nav-options ul {
+    font-size: 2px;
+  }
+  .NavBar-nav-options li {
+    font-size: 2px;
+  }
+}
+
 .NavBar {
   display: flex;
   flex-direction: column;
@@ -10,17 +23,20 @@
   /*height: 25rem;*/
   margin-bottom:  -100px;
   height:0px;
+  width:100%;
 }
 
 .NavBar-nav-options ul {
   display: flex;
   justify-content: center;
+  width: 100%;
   /*background-color: blue;*/
   margin-bottom: 0.22rem;
   color: #000000;
   list-style-type: none;
   padding:0;
-  /*height: 10px;*/
+  height: 0px;
+  /*font-size: 1px;*/
 }
 
 .NavBar-nav-options li {
@@ -28,7 +44,7 @@
   background-color: #6b727f;
   cursor: pointer;
   width: 100%;
-  height: 20px;
+  height: 30px;
   /*border-bottom: 3px solid #fff;*/
   border-color: white;
   padding: 0 2.58rem .33rem 2.58rem;
